@@ -7,17 +7,17 @@ PRG="$0"
 
 # 脚本所在目录
 BIN=`cd $(dirname "$PRG"); pwd`
-echo "BIN=$BIN"
+#echo "BIN=$BIN"
 
 HOME=`dirname "$BIN"`
-echo "HOME=$HOME"
+#echo "HOME=$HOME"
 
 # 端口
 PORT="$1"
 
 # 如果没指定，那就给默认值
 if [ ! $PORT ];then
-  PORT=36160
+  PORT=36162
 fi
 
 # 如果指定了端口，检查一下是否符合格式
@@ -30,14 +30,14 @@ fi
 
 # 找到所有lib下的依赖包
 LIB=`find ${HOME}/lib/ -name "*.jar"`
-echo "LIB=$LIB"
+#echo "LIB=$LIB"
 
 # 日志目录
 LOG=${HOME}/logs/
-echo "LOG=$LOG"
+#echo "LOG=$LOG"
 
 PIDFILE=${HOME}/pidfile
-echo "PIDFILE=$PIDFILE"
+#echo "PIDFILE=$PIDFILE"
 
 classpath="."
 classpath=$classpath:$CONF
@@ -45,24 +45,16 @@ for item in $LIB
 do
   classpath=$classpath:$item
 done
-echo "classpath=$classpath"
+#echo "classpath=$classpath"
 
-JVM_OPTS="-server -Xms4G -Xmx4G -XX:MaxPermSize=512M -XX:PermSize=512M -Xloggc:$LOG/gc.log -XX:-PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70  -XX:+UseCMSCompactAtFullCollection -XX:+CMSParallelRemarkEnabled -XX:+HeapDumpOnOutOfMemoryError"
+JVM_OPTS="-server -Xms256M -Xmx256M -Xloggc:$LOG/gc.log -XX:-PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:+CMSParallelRemarkEnabled -XX:+HeapDumpOnOutOfMemoryError"
 
-#for i in `ps aux|grep idDatabase | grep $PORT | awk '{print$2}'`
-#do
-#  echo "kill -9 "$i
-#  kill -9 $i
-#done
-
-
-#if [ -f $PIDFILE ];then
-#  PID=`cat $PIDFILE`
-#  tr=`jps -v | grep $PID | grep $PORT | grep $HOME`
-#  echo "tr=$tr"
-#  if [ "$tr" != "" ];then
-#    echo "kill $PID"
-#    kill $PID
-#  fi
-#fi
+for i in `ps aux|grep idDatabase | grep $PORT | awk '{print$2}'`
+do
+  echo "kill "$i
+  kill $i
+done
 sleep 3
+
+java -Dserver.port=$PORT $JVM_OPTS -cp $classpath com.qzt360.Application > /dev/null 2>&1 &
+echo "idDatabase start success."
